# opengl-recipes

./: .gitignore  CMakeLists.txt  README.md
src/: 00.triangle.cpp  00.triangle.h  01.rectangle.cpp  01.rectangle.h  02.Uniform.cpp  02.Uniform.h  03.VertexMore.cpp  03.VertexMore.h  04.Texture.cpp  04.Texture.h  filesystem.h  main.cpp  shader.h  utils.cpp  utils.h
